Changes Day 2 and Day 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+
     <!-- Using javascript to manipulate DOM -start -->
     <script>
       //   const root = document.getElementById("root");
@@ -19,31 +20,32 @@
     </script>
     <!-- Using javascript to manipulate DOM -end -->
     <!-- React CDN Links -->
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.production.min.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-    ></script>
+    ></script> -->
     <!-- Using React to manipulate DOM -->
-    <script>
-      const h1Element = React.createElement(
-        "h1",
-        { id: "Container" },
-        "Hello Guys"
-      );
-      const h2Element = React.createElement(
-        "h2",
-        { id: "Container" },
-        "This is H2"
-      );
-      const divElement = React.createElement("div", {}, [h1Element, h2Element]);
-      const rootElement = document.getElementById("root");
-      const root = ReactDOM.createRoot(rootElement);
-      console.log(root);
-      root.render(divElement);
-    </script>
+    <!-- <script>
+                const h1Element = React.createElement(
+            "h1",
+            { id: "Container", key: 1 },
+            "Hello Guys"
+          );
+          const h2Element = React.createElement(
+            "h2",
+            { id: "Container", key: 2 },
+            "This is H11"
+          );
+          const divElement = React.createElement("div", {}, [h1Element, h2Element]);
+          const rootElement = document.getElementById("root");
+          const root = ReactDOM.createRoot(rootElement);
+          console.log(root);
+          root.render(divElement);
+    </script> -->
+    <script type="module" src="App.js"></script>
   </body>
 </html>
