Day 04 changes for food app

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
           console.log(root);
           root.render(divElement);
     </script> -->
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
